# SNNLab

./: .gitignore  README.md  pyproject.toml
demos/: try_resnet.py
snnlab/models/resnet/: __init__.py  res_block.py  spiking_resnet.py  spiking_resnet_features.py
snnlab/models/resnet/blocks/: README.md  __init__.py  base_block.py  basic_block.py  block_builder.py  bottle_neck.py  conv_block.py  res_block.py
snnlab/utils/: __init__.py  visualization.py
