[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  authors = [
    { name="Ibrahim Sayed", email="ibrahim.e.sayed@outlook.com" },
  ]

  name = "snnlab"
  description = """ A Spiking Neural Network (SNN) Package with a modular design
                and configuration system inspired by OpenMMLab.
                It provides a flexible framework for building and training SNNs,
                """

  requires-python = ">=3.10"
  version = "0.0.1"
  readme =  {file = "README.md" , content-type = "text/markdown"}

  dependencies = [
    "spikingjelly",
    "pydantic",
    "numpy<2.0.0",
    "matplotlib",
    "torchview",
    "lazy_loader",
    "torchvision",
    "open3d",
    "plyfile",
    "numba",
    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git",
  ]

[tool.hatch]
  metadata.allow-direct-references = true
